src/mips/MipsParser.java
// Generated from Mips.g4 by ANTLR 4.4

  package mips;
  import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MipsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__59=1, T__58=2, T__57=3, T__56=4, T__55=5, T__54=6, T__53=7, T__52=8, 
		T__51=9, T__50=10, T__49=11, T__48=12, T__47=13, T__46=14, T__45=15, T__44=16, 
		T__43=17, T__42=18, T__41=19, T__40=20, T__39=21, T__38=22, T__37=23, 
		T__36=24, T__35=25, T__34=26, T__33=27, T__32=28, T__31=29, T__30=30, 
		T__29=31, T__28=32, T__27=33, T__26=34, T__25=35, T__24=36, T__23=37, 
		T__22=38, T__21=39, T__20=40, T__19=41, T__18=42, T__17=43, T__16=44, 
		T__15=45, T__14=46, T__13=47, T__12=48, T__11=49, T__10=50, T__9=51, T__8=52, 
		T__7=53, T__6=54, T__5=55, T__4=56, T__3=57, T__2=58, T__1=59, T__0=60, 
		ADDR=61, REG=62, TREG=63, AREG=64, VREG=65, SREG=66, KREG=67, STRING=68, 
		IDENTIFIER=69, INTEGER=70, COMMENT=71, NL=72, WS=73;
	public static final String[] tokenNames = {
		"<INVALID>", "'addu'", "'srlb'", "'lb'", "'sh'", "'blt'", "'sra'", "'.data'", 
		"'mult'", "'ori'", "'move'", "'xori'", "'addi'", "'addiu'", "'lw'", "'j'", 
		"'divu'", "','", "'multu'", "'bge'", "'srl'", "'la'", "'exit'", "'sub'", 
		"'beq'", "'subu'", "'li'", "'jr'", "'.space'", "'nor'", "'sltiu'", "'andi'", 
		"'lh'", "'lbu'", "'.text'", "'.byte'", "'srab'", "'.asciiz'", "'sw'", 
		"'lhu'", "'slt'", "'.ascii'", "'''", "'sllb'", "'sb'", "'sll'", "'add'", 
		"'lui'", "':'", "'jalr'", "'sltu'", "'jal'", "'xor'", "'or'", "'bgt'", 
		"'div'", "'bne'", "'slti'", "'.word'", "'and'", "'ble'", "ADDR", "REG", 
		"TREG", "AREG", "VREG", "SREG", "KREG", "STRING", "IDENTIFIER", "INTEGER", 
		"COMMENT", "NL", "WS"
	};
	public static final int
		RULE_prog = 0, RULE_data = 1, RULE_var_list = 2, RULE_var_decl = 3, RULE_var_init = 4, 
		RULE_ascii_var = 5, RULE_asciiz_var = 6, RULE_word_var = 7, RULE_int_list = 8, 
		RULE_space_var = 9, RULE_byte_var = 10, RULE_byte_list = 11, RULE_text = 12, 
		RULE_label_list = 13, RULE_label = 14, RULE_stmt_list = 15, RULE_stmt = 16, 
		RULE_add_stmt = 17, RULE_addi_stmt = 18, RULE_addiu_stmt = 19, RULE_addu_stmt = 20, 
		RULE_sub_stmt = 21, RULE_subu_stmt = 22, RULE_mult_stmt = 23, RULE_multu_stmt = 24, 
		RULE_div_stmt = 25, RULE_divu_stmt = 26, RULE_and_stmt = 27, RULE_andi_stmt = 28, 
		RULE_nor_stmt = 29, RULE_or_stmt = 30, RULE_ori_stmt = 31, RULE_xor_stmt = 32, 
		RULE_xori_stmt = 33, RULE_sll_stmt = 34, RULE_srl_stmt = 35, RULE_sra_stmt = 36, 
		RULE_sllb_stmt = 37, RULE_srlb_stmt = 38, RULE_srab_stmt = 39, RULE_slt_stmt = 40, 
		RULE_slti_stmt = 41, RULE_sltiu_stmt = 42, RULE_sltu_stmt = 43, RULE_beq_stmt = 44, 
		RULE_bne_stmt = 45, RULE_blt_stmt = 46, RULE_bgt_stmt = 47, RULE_ble_stmt = 48, 
		RULE_bge_stmt = 49, RULE_j_stmt = 50, RULE_jal_stmt = 51, RULE_jr_stmt = 52, 
		RULE_jalr_stmt = 53, RULE_exit_stmt = 54, RULE_move_stmt = 55, RULE_lb_stmt = 56, 
		RULE_lbu_stmt = 57, RULE_lh_stmt = 58, RULE_lhu_stmt = 59, RULE_lui_stmt = 60, 
		RULE_lw_stmt = 61, RULE_li_stmt = 62, RULE_la_stmt = 63, RULE_sb_stmt = 64, 
		RULE_sw_stmt = 65, RULE_sh_stmt = 66;
	public static final String[] ruleNames = {
		"prog", "data", "var_list", "var_decl", "var_init", "ascii_var", "asciiz_var", 
		"word_var", "int_list", "space_var", "byte_var", "byte_list", "text", 
		"label_list", "label", "stmt_list", "stmt", "add_stmt", "addi_stmt", "addiu_stmt", 
		"addu_stmt", "sub_stmt", "subu_stmt", "mult_stmt", "multu_stmt", "div_stmt", 
		"divu_stmt", "and_stmt", "andi_stmt", "nor_stmt", "or_stmt", "ori_stmt", 
		"xor_stmt", "xori_stmt", "sll_stmt", "srl_stmt", "sra_stmt", "sllb_stmt", 
		"srlb_stmt", "srab_stmt", "slt_stmt", "slti_stmt", "sltiu_stmt", "sltu_stmt", 
		"beq_stmt", "bne_stmt", "blt_stmt", "bgt_stmt", "ble_stmt", "bge_stmt", 
		"j_stmt", "jal_stmt", "jr_stmt", "jalr_stmt", "exit_stmt", "move_stmt", 
		"lb_stmt", "lbu_stmt", "lh_stmt", "lhu_stmt", "lui_stmt", "lw_stmt", "li_stmt", 
		"la_stmt", "sb_stmt", "sw_stmt", "sh_stmt"
	};

	@Override
	public String getGrammarFileName() { return "Mips.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    public ArrayList<Instruction> instructions = new ArrayList<Instruction>();
	    public HashMap<String, Integer> labelMap = new HashMap<String, Integer>();
	    public Integer instructionIndex = 0;

	public MipsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			setState(142);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				_la = _input.LA(1);
				if (_la==T__26) {
					{
					setState(134); text();
					}
				}

				setState(137); data();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				_la = _input.LA(1);
				if (_la==T__53) {
					{
					setState(138); data();
					}
				}

				setState(141); text();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public Var_listContext var_list() {
			return getRuleContext(Var_listContext.class,0);
		}
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).enterData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).exitData(this);
		}
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_data);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); match(T__53);
			setState(145); var_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_listContext extends ParserRuleContext {
		public Var_declContext var_decl(int i) {
			return getRuleContext(Var_declContext.class,i);
		}
		public List<Var_declContext> var_decl() {
			return getRuleContexts(Var_declContext.class);
		}
		public Var_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).enterVar_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).exitVar_list(this);
		}
	}

	public final Var_listContext var_list() throws RecognitionException {
		Var_listContext _localctx = new Var_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(147); var_decl();
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public Var_initContext var_init() {
			return getRuleContext(Var_initContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(MipsParser.IDENTIFIER, 0); }
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).exitVar_decl(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153); match(IDENTIFIER);
			setState(154); match(T__12);
			setState(155); var_init();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_initContext extends ParserRuleContext {
		public Space_varContext space_var() {
			return getRuleContext(Space_varContext.class,0);
		}
		public Ascii_varContext ascii_var() {
			return getRuleContext(Ascii_varContext.class,0);
		}
		public Asciiz_varContext asciiz_var() {
			return getRuleContext(Asciiz_varContext.class,0);
		}
		public Byte_varContext byte_var() {
			return getRuleContext(Byte_varContext.class,0);
		}
		public Word_varContext word_var() {
			return getRuleContext(Word_varContext.class,0);
		}
		public Var_initContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).enterVar_init(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).exitVar_init(this);
		}
	}

	public final Var_initContext var_init() throws RecognitionException {
		Var_initContext _localctx = new Var_initContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var_init);
		try {
			setState(162);
			switch (_input.LA(1)) {
			case T__19:
				enterOuterAlt(_localctx, 1);
				{
				setState(157); ascii_var();
				}
				break;
			case T__23:
				enterOuterAlt(_localctx, 2);
				{
				setState(158); asciiz_var();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 3);
				{
				setState(159); word_var();
				}
				break;
			case T__32:
				enterOuterAlt(_localctx, 4);
				{
				setState(160); space_var();
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 5);
				{
				setState(161); byte_var();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ascii_varContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(MipsParser.STRING, 0); }
		public Ascii_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ascii_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).enterAscii_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).exitAscii_var(this);
		}
	}

	public final Ascii_varContext ascii_var() throws RecognitionException {
		Ascii_varContext _localctx = new Ascii_varContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ascii_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164); match(T__19);
			setState(165); match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Asciiz_varContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(MipsParser.STRING, 0); }
		public Asciiz_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asciiz_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).enterAsciiz_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).exitAsciiz_var(this);
		}
	}

	public final Asciiz_varContext asciiz_var() throws RecognitionException {
		Asciiz_varContext _localctx = new Asciiz_varContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_asciiz_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167); match(T__23);
			setState(168); match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Word_varContext extends ParserRuleContext {
		public Int_listContext int_list;
		public Int_listContext int_list() {
			return getRuleContext(Int_listContext.class,0);
		}
		public Word_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_word_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).enterWord_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).exitWord_var(this);
		}
	}

	public final Word_varContext word_var() throws RecognitionException {
		Word_varContext _localctx = new Word_varContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_word_var);
		try {
			setState(175);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(170); match(T__2);
				setState(171); ((Word_varContext)_localctx).int_list = int_list(0);

				              System.out.println("Number List");
				              for (Integer val : ((Word_varContext)_localctx).int_list.vec) {
				                System.out.print(val + "  ");
				              }
				              System.out.println();
				            
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(174); match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Int_listContext extends ParserRuleContext {
		public Vector<Integer> vec;
		public Int_listContext list;
		public Token a;
		public TerminalNode INTEGER() { return getToken(MipsParser.INTEGER, 0); }
		public Int_listContext int_list() {
			return getRuleContext(Int_listContext.class,0);
		}
		public Int_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_int_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).enterInt_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsListener ) ((MipsListener)listener).exitInt_list(this);
		}
	}

	public final Int_listContext int_list() throws RecognitionException {
		return int_list(0);
	}

	private Int_listContext int_list(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Int_listContext _localctx = new Int_listContext(_ctx, _parentState);
		Int_listContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_int_list, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(178); ((Int_listContext)_localctx).a = match(INTEGER);

			      Integer num = Integer.valueOf((((Int_listContext)_localctx).a!=null?((Int_listContext)_localctx).a.getText():null));
			      ((Int_listContext)_localctx).vec =  new Vector<Integer>();      
			      _localctx.vec.addElement(num);
			    
			}
			_ctx.stop = _input.LT(-1);
			setState(187);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Int_listContext(_parentctx, _parentState);
					_localctx.list = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_int_list);
					setState(181);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(182); match(T__43);
					setState(183); ((Int_listContext)_localctx).a = match(INTEGER);

					                Integer num = Integer.valueOf((((Int_listContext)_localctx).a!=null?((Int_listContext)_localctx).a.getText():null));
					                ((Int_listContext)_localctx).list.vec.addElement(num);
					                ((Int_listContext)_localctx).vec =  ((Int_listContext)_localctx).list.vec; 
					              
					}
					} 
				}
				setState(189);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
